crates/ruff_python_parser/tests/snapshots/invalid_syntax@import_stmt_parenthesized_names.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/import_stmt_parenthesized_names.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..25,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 7..10,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 7..10,
                            func: Attribute(
                                ExprAttribute {
                                    node_index: NodeIndex(None),
                                    range: 7..10,
                                    value: Call(
                                        ExprCall {
                                            node_index: NodeIndex(None),
                                            range: 7..10,
                                            func: Attribute(
                                                ExprAttribute {
                                                    node_index: NodeIndex(None),
                                                    range: 7..8,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 7..8,
                                                            id: Name("__xonsh__"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    attr: Identifier {
                                                        id: Name("cmd"),
                                                        range: 7..8,
                                                        node_index: NodeIndex(None),
                                                    },
                                                    ctx: Load,
                                                },
                                            ),
                                            arguments: Arguments {
                                                range: 7..10,
                                                node_index: NodeIndex(None),
                                                args: [
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 8..9,
                                                            id: Name("a"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                                keywords: [],
                                            },
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name("hide"),
                                        range: 7..10,
                                        node_index: NodeIndex(None),
                                    },
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 7..10,
                                node_index: NodeIndex(None),
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 18..24,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 18..24,
                            func: Attribute(
                                ExprAttribute {
                                    node_index: NodeIndex(None),
                                    range: 18..24,
                                    value: Call(
                                        ExprCall {
                                            node_index: NodeIndex(None),
                                            range: 18..24,
                                            func: Attribute(
                                                ExprAttribute {
                                                    node_index: NodeIndex(None),
                                                    range: 18..19,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 18..19,
                                                            id: Name("__xonsh__"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    attr: Identifier {
                                                        id: Name("cmd"),
                                                        range: 18..19,
                                                        node_index: NodeIndex(None),
                                                    },
                                                    ctx: Load,
                                                },
                                            ),
                                            arguments: Arguments {
                                                range: 18..24,
                                                node_index: NodeIndex(None),
                                                args: [
                                                    Tuple(
                                                        ExprTuple {
                                                            node_index: NodeIndex(None),
                                                            range: 18..24,
                                                            elts: [
                                                                Name(
                                                                    ExprName {
                                                                        node_index: NodeIndex(None),
                                                                        range: 19..20,
                                                                        id: Name("a"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                                Name(
                                                                    ExprName {
                                                                        node_index: NodeIndex(None),
                                                                        range: 22..23,
                                                                        id: Name("b"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                            ],
                                                            ctx: Load,
                                                            parenthesized: true,
                                                        },
                                                    ),
                                                ],
                                                keywords: [],
                                            },
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name("hide"),
                                        range: 18..24,
                                        node_index: NodeIndex(None),
                                    },
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 18..24,
                                node_index: NodeIndex(None),
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | import (a)
  |        ^ Syntax Error: Expected one or more symbol names after import
2 | import (a, b)
  |


  |
1 | import (a)
2 | import (a, b)
  |        ^ Syntax Error: Expected one or more symbol names after import
  |
