crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_fstring_literal_element.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_fstring_literal_element.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..58,
        body: [
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 0..26,
                    value: FString(
                        ExprFString {
                            node_index: AtomicNodeIndex(..),
                            range: 0..26,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 0..26,
                                            node_index: AtomicNodeIndex(..),
                                            elements: [
                                                Literal(
                                                    FStringLiteralElement {
                                                        range: 2..25,
                                                        node_index: AtomicNodeIndex(..),
                                                        value: "",
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Single,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 27..57,
                    value: FString(
                        ExprFString {
                            node_index: AtomicNodeIndex(..),
                            range: 27..57,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 27..57,
                                            node_index: AtomicNodeIndex(..),
                                            elements: [
                                                Literal(
                                                    FStringLiteralElement {
                                                        range: 31..54,
                                                        node_index: AtomicNodeIndex(..),
                                                        value: "",
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: true,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | f'hello \N{INVALID} world'
  |            ^^^^^^^ Syntax Error: Got unexpected unicode
2 | f"""hello \N{INVALID} world"""
  |


  |
1 | f'hello \N{INVALID} world'
2 | f"""hello \N{INVALID} world"""
  |              ^^^^^^^ Syntax Error: Got unexpected unicode
  |
